engine section images and organization

--- a/html/Maintenance/Engine Removal.html
+++ b/html/Maintenance/Engine Removal.html
@@ -245,21 +245,44 @@
             <p class="boxCautionLargeText">Retain input lever for installation on replacement engine.</p>
         </div>
     </li>
-    
-    <li>Disconnect condition lever control cable at FCU. </li>
-    <li>Disconnect Py line at FCU. (PT6A-65 or -67 only) </li>
-    <li>Disconnect fuel return/fuel pump vent line from FCU. (PT6A-60, -65, or -67) </li>
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2"
-        src="img/imgTemplate_3x2.png">
-    <p>Condition Lever</p>
-    <p>Py Line</p>
 
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-    <p>FCU</p>
+    <li>Disconnect condition lever control cable at FCU.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineConditionLever.png">
+            <figcaption class="centerText">Condition Lever</figcaption>
+        </figure>
+    </li>
+    <li>Disconnect Py line at FCU. (PT6A-65 or -67 only).
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EnginePyLine.png">
+            <figcaption class="centerText">Py Line</figcaption>
+        </figure>
+    </li>
+    <li>Disconnect fuel return/fuel pump vent line from FCU. (PT6A-60, -65, or -67).
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineFcuFuelReturnLine.png">
+            <figcaption class="centerText">Fuel Return Line at FCU</figcaption>
+        </figure>
+    </li>
+
 
     <li>Remove beta light switch, bracket, and ground wires connected to engine inlet case flange. (Some applications
-        have an alternate front mount beta light switch location). </li>
-    <li>Disconnect fuel flow transducer cannon plug, (if equipped) and remove transducer. </li>
+        have an alternate front mount beta light switch location).
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineBetaLightSwitch.png">
+            <figcaption class="centerText">Beta Light Switch</figcaption>
+        </figure>
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineBetaLightSwitchFwdLocation.png">
+            <figcaption class="centerText">Beta Light Switch (Fwd Location)</figcaption>
+        </figure>
+    </li>
+    <li>Disconnect fuel flow transducer cannon plug, (if equipped) and remove transducer.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineFuelFlowTransducer.png">
+            <figcaption class="centerText">Fuel Flow Transducer</figcaption>
+        </figure>
+    </li>
     <li>Disconnect oil temperature sender and remove sender. </li>
     <li>Disconnect oil pressure line from restrictor fitting in engine and remove fitting. </li>
     <div class="boxCautionLarge">
@@ -267,73 +290,116 @@
         <p class="boxCautionLargeText">Retain restrictor fitting for installation in replacement engine.</p>
     </div>
 
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2"
-        src="img/imgTemplate_3x2.png">
-    <p>Beta Light Switch Fuel FLow</p>
 
-    <p>transducer</p>
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-    <p>Beta Light Switch Alternate Front Mount</p>
+    <li>Disconnect (Ng) tachometer generator cannon plug and AGB chip detector cannon plug (PT6A-65 or -67 only).
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineNgTachAndAgbChipDetectPlugs.png">
+            <figcaption class="centerText">Ng Tach and AGB Chip Detector Connectors</figcaption>
+        </figure>
+    </li>
+    <li>Drain engine oil.
+        <figure>
+            <img class="imageCentered_5x3" src="img/img_EngineOilDraining.png">
+            <figcaption class="centerText">Oil Drains</figcaption>
+        </figure>
+    </li>
 
-    <li>Disconnect (Ng) tachometer generator cannon plug. </li>
-    <li>Drain engine oil.</li>
-    <li>Disconnect engine AGB chip detector cannon plug (PT6A-65 or -67 only). </li>
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
+    <li>Remove drain lines from engine accessory drive pads. (Starter generator, FCU, fuel pump, and air conditioning
+        drive pad)
+        <figure>
+            <img class="imageCentered_6x4" src="img/img_EngineDrainLines.png">
+            <figcaption class="centerText">Drain Lines</figcaption>
+        </figure>
+    </li>
 
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2"
-        src="img/imgTemplate_3x2.png">
-    <p>Ng Tach and AGB Chip Detector Oil Drain Plugs</p>
-    <li><img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2"
-            src="img/imgTemplate_3x2.png"></li>
-    <p>Remove drain lines from engine accessory drive pads. (Starter generator, FCU, fuel pump, and air conditioning
-        drive pad) </p>
-    <p>Drain Lines Engine Driven Fuel Pump</p>
-    <li>Remove engine AGB breather line. </li>
-    <li>Disconnect upper oil cooler oil line at engine oil tank fitting. </li>
-    <li>Disconnect lower oil cooler line at engine AGB fitting. </li>
+
+    <li>Remove engine AGB breather line.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineAgbBeatherLine.png">
+            <figcaption class="centerText">AGB Breather Line</figcaption>
+        </figure>
+    </li>
+
+    <li>Disconnect upper oil cooler oil line at engine oil tank fitting.</li>
+
+    <li>Disconnect lower oil cooler line at engine AGB fitting.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineLowerOilCoolerLine.png">
+            <figcaption class="centerText">Lower Oil Cooler Line</figcaption>
+        </figure>
+    </li>
+
     <li>Disconnect main fuel line (see above) at intake side of engine driven fuel pump. </li>
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2"
-        src="img/imgTemplate_3x2.png">
-    <p>Upper Oil Cooler and AGB Breather Lower Oil Cooler </p>
-    <li>Remove starter generator from QAD mount. </li>
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-    <p>Starter Generator</p>
 
-    <div class="boxCautionLarge">
-        <p class="boxCautionLargeHeader">NOTE</p>
-        <p class="boxCautionLargeText">If the starter generator is to be installed on the replacment engine, it may be
-            convenient to leave the associated wiring connected and remove the S/G from the QAD mount, tying it back to
-            support the weight.</p>
-    </div>
 
-    <div class="boxCautionLarge">
-        <p class="boxCautionLargeHeader">CAUTION</p>
-        <p class="boxCautionLargeText">The starter generator must be fully supported during the removal/installation. Do
-            not allow the weight of the starater generator to rest on the spline drive as inserted into the engine or
-            damage to the engine starter generator drive centrifugal breather carbon seal will result.</p>
-    </div>
+    <li>Remove starter generator from QAD mount.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineStarterGenerator.png">
+            <figcaption class="centerText">Starter / Generator</figcaption>
+        </figure>
+        <div class="boxCautionLarge">
+            <p class="boxCautionLargeHeader">NOTE</p>
+            <p class="boxCautionLargeText">If the starter generator is to be installed on the replacement engine, it may
+                be
+                convenient to leave the associated wiring connected and remove the S/G from the QAD mount, tying it back
+                to
+                support the weight.</p>
+        </div>
 
-    <li>Remove the air conditioner compressor assembly from the drive pad.</li>
-    <div class="boxCautionLarge">
-        <p class="boxCautionLargeHeader">CAUTION</p>
-        <p class="boxCautionLargeText">Do not disconnect air conditioning hoses or freon will be discharged. Tie
-            compressor back to support the weight while engine change is in process.</p>
-    </div>
+        <div class="boxCautionLarge">
+            <p class="boxCautionLargeHeader">CAUTION</p>
+            <p class="boxCautionLargeText">The starter generator must be fully supported during the
+                removal/installation. Do
+                not allow the weight of the starter generator to rest on the spline drive as inserted into the engine or
+                damage to the engine starter generator drive centrifugal breather carbon seal will result.</p>
+        </div>
+    </li>
 
-    <img class="imageCentered_3x2" src="img/imgTemplate_3x2.png">
-    <p>A/C Compressor</p>
 
-    <li> Attach the engine spreader bar to the engine hoisting lugs. Position a suitable hoist directly over the engine
-        and attach the engine spreader bar. </li>
-    <li>Raise the hoist as necessary to support the weight of the engine. </li>
-    <li>Remove the engine mount hardware. </li>
-    <div class="boxCautionLarge">
-        <p class="boxCautionLargeHeader">CAUTION</p>
-        <p class="boxCautionLargeText">Prior to removing the engine from the airframe, ensure that all associated lines,
-            hoses, wiring, cables, tubes, etc. are free and clear from obstructing the removal of the engine.</p>
-    </div>
-    <li><img class="imageCentered_3x2" src="img/imgTemplate_3x2.png"><img class="imageCentered_3x2"
-            src="img/imgTemplate_3x2.png"></li>
-    <p>Hoist engine clear of airframe and place in suitable engine stand or shipping container. </p>
-    <p>Spreader Bar Engine Mount/Vibration Isolater </p>
+
+
+
+    <li>Remove the air conditioner compressor assembly from the drive pad.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineAcCompressor.png">
+            <figcaption class="centerText">Air Conditioner Compressor</figcaption>
+        </figure>
+        <div class="boxCautionLarge">
+            <p class="boxCautionLargeHeader">CAUTION</p>
+            <p class="boxCautionLargeText">Do not disconnect air conditioning hoses or freon will be discharged. Tie
+                compressor back to support the weight while engine change is in process.</p>
+        </div>
+    </li>
+
+
+
+    <li>Attach the engine spreader bar to the engine hoisting lugs. Position a suitable hoist directly over the engine
+        and attach the engine spreader bar.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineSpreaderBar.png">
+            <figcaption class="centerText">Spreader Bar</figcaption>
+        </figure>
+    </li>
+
+    <li>Raise the hoist as necessary to support the weight of the engine.
+
+    </li>
+
+    <li>Remove the engine mount hardware.
+        <figure>
+            <img class="imageCentered_3x5" src="img/img_EngineMountIsolator.png">
+            <figcaption class="centerText">Engine Mounts</figcaption>
+        </figure>
+        <div class="boxCautionLarge">
+            <p class="boxCautionLargeHeader">CAUTION</p>
+            <p class="boxCautionLargeText">Prior to removing the engine from the airframe, ensure that all associated
+                lines,
+                hoses, wiring, cables, tubes, etc. are free and clear from obstructing the removal of the engine.</p>
+        </div>
+    </li>
+
+
+
+    <li>Hoist engine clear of airframe and place in suitable engine stand or shipping container. </li>
+
 </ol>
