tail wheel lock figure

--- a/html/Maintenance/Tail Wheel Lock Pin and Housing.html
+++ b/html/Maintenance/Tail Wheel Lock Pin and Housing.html
@@ -1,4 +1,9 @@
-<p>Details of the tail-wheel lock-pin housing are shown in Figure 78.   </p>
+<p>Details of the legacy tail-wheel lock-pin housing are shown below.</p>
+
+<figure>
+    <img src="img/img_Fig_78.png" class="imageCentered_6x4">
+    <figcaption class="centerText">Tail Wheel Lock</figcaption>
+</figure>
 
 <p>The lock pin housing is p/n 40025-6 and attaches to the steel plate on the lower end of the fork housing with four countersunk screws. The four holes in the base of the lock pin housing are oversize to allow adjustment of the locking pin. If the aircraft tends to steer to the left or to the right on the ground with the lock pin engaged, it is necessary to re-position the lock pin housing. Jack the tail wheel clear of the ground, lift the lock pin up and swivel the fork to one side so that the four screw heads are exposed. Make a pencil mark along the edge of the lock pin housing plate for a reference and estimate the amount of movement for the lock pin housing. </p>
 
