--- a/html/Inspection/Insp_TAIL GEAR.html
+++ b/html/Inspection/Insp_TAIL GEAR.html
@@ -32,7 +32,7 @@
   <tr>
     <td class="cellInspectionNumber">TLG7</td>
     <td class="cellInspectionInterval">(12 Months)</td>
-    <td class="cellInspectionText">Remove tail wheel lock pin housing, slide out locking pin, and check for straightness and wear. Lubricate, re-install and check alignment as called out in the TAIL WHEEL LOCK PIN AND HOUSING of the Maintenance Section of this manual.</td>
+    <td class="cellInspectionText">Inspect tail wheel lock mechanism per <xref sectionTarget="2.90.7" prependLabel="Section"></xref>.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">TLG8</td>
