weight and balance figure and xref

--- a/html/Maintenance/Weight and Balance.html
+++ b/html/Maintenance/Weight and Balance.html
@@ -1,1 +1,6 @@
-<p>The proper maintenance of weight and balance records is important to ensure that the airplane is operated within the weight and center of gravity limits that are established in the Flight Manual. The weight-and-balance diagram with sample calculation is shown in Figure 80. The airplane must be weighed in the attitude described under LEVELING. </p>
+<p>The proper maintenance of weight and balance records is important to ensure that the airplane is operated within the weight and center of gravity limits that are established in the Flight Manual. The weight-and-balance diagram with sample calculation is shown below. The airplane must be weighed in the attitude described in <xref sectionTarget="2.0.5" prependLabel="Section"></xref>.</p>
+
+<figure>
+    <img class="imageCentered_6x8" src="img/img_Fig_80.png">
+    <figcaption class="centerText">Sample Weight and Balance Calculation</figcaption>
+</figure>
