hstab section and time limits in recommendation table

--- a/html/Maintenance/Horizontal Stabilizer Struts.html
+++ b/html/Maintenance/Horizontal Stabilizer Struts.html
@@ -1,1 +1,16 @@
-<p style="color: red;">CONTENT NOT CREATED</p>
+<p>
+    There are two eyebolts that attach to
+    a welded steel brace inside the stabilizer for strut attachment. Eyebolt replacement should be in accordance with SL
+    129 and <xref sectionTarget="2.100.1" prependLabel="Section"></xref>.
+</p>
+
+
+
+<p>
+    The factory procedure is to align the face of the eyebolts with the strut clevis before the nut on the eyebolt is
+    fully torqued. There is a plug button installed in the skin above the nut.
+</p>
+
+<p>
+    The stabilizer struts' leading edges are typically protected with 3M 8671-3 anti-abrasion tape.  Thicker protection tape or material should not be installed as damage can occur (ref SL409 and SL383).  The tape should be periodically inspected for condition and replaced as required.
+</p>
