--- a/html/Maintenance/Recommended Time Limits.html
+++ b/html/Maintenance/Recommended Time Limits.html
@@ -3,7 +3,7 @@
     <tr>
         <th class="plainTableHeaderCell">Part Number</th>
         <th class="plainTableHeaderCell">Description</th>
-        <th class="plainTableHeaderCell">Interval</th>
+        <th class="plainTableHeaderCell" style="width: 1.15in;">Interval</th>
         <th class="plainTableHeaderCell">Reference</tr>
     </tr>
     <tr>
@@ -47,5 +47,17 @@
         <td class="plainTableNormalCell">Aft End Tail Spring Bolts</td>
         <td class="plainTableNormalCell">3000 Hours</td>
         <td class="plainTableNormalCell">&nbsp;</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">AN47-30A</td>
+        <td class="plainTableNormalCell">Horizontal Stabilizer Eyebolts (thru S/N 802-0188)</td>
+        <td class="plainTableNormalCell">1350 Hours</td>
+        <td class="plainTableNormalCell">SL129</td>
+    </tr>
+    <tr>
+        <td class="plainTableNormalCell">30775-1</td>
+        <td class="plainTableNormalCell">Horizontal Stabilizer Eyebolts (S/N 802-0189 and SUBS and those modified IAW SL 129A)</td>
+        <td class="plainTableNormalCell">3000 Hours</td>
+        <td class="plainTableNormalCell">SL129</td>
     </tr>
 </table>
