--- a/html/Maintenance/Air Conditioner - Engine Powered.html
+++ b/html/Maintenance/Air Conditioner - Engine Powered.html
@@ -1,4 +1,9 @@
-<p>The wiring schematic for the engine-powered air conditioner is shown in Figure 4. </p>
+<p>The wiring schematic for the engine-powered air conditioner is shown in below. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_4.png">
+    <figcaption class="centerText">Air Conditioner</figcaption>
+</figure>
 
 <p>The Air Tractor engine-powered air conditioner uses a Sanden 508 compressor with a serpentine type pulley and electromagnetic clutch. A splined shaft in the compressor-mount casting engages a drive gear in the accessory case of the engine. This quill shaft (p/n 51628) has a small diameter shear section that protects the engine in case of a compressor or bearing failure. This pulley drives the compressor's flywheel by the use of a pair of matched V-belts. The splined shaft, small pulley, belts, and compressor flywheel are engaged and moving any time that the compressor section of the engine is turning. </p>
 
