--- a/html/Maintenance/Elevator Trim Tab Controls.html
+++ b/html/Maintenance/Elevator Trim Tab Controls.html
@@ -1,8 +1,18 @@
 <p>Details of the elevator trim tab cockpit controls are shown in Figure 8.  The elevator trim tab system uses the elevator tabs as both trim tabs and as elevator boost tabs. The boost tabs function to relieve a portion of the control load during maneuvers. </p>
 
-<p>Elevator trim is controlled by a handwheel on the left-hand wall of the cockpit. The handwheel is shaft-connected to a two-sheave drum that drives two taut and opposing cables. These are connected at their opposite end to a pulley shaft that positions a worm gear in a gear box that is located in the aft fuselage. The worm-gear box is shown in Figure 18. </p>
+<p>Elevator trim is controlled by a handwheel on the left-hand wall of the cockpit. The handwheel is shaft-connected to a two-sheave drum that drives two taut and opposing cables. These are connected at their opposite end to a pulley shaft that positions a worm gear in a gear box that is located in the aft fuselage. The worm-gear box is shown below. </p>
 
-<p>The worm gear drives a sector gear with an exposed sector arm attached on the aft side of the gatebox. The sector arm is connected by a pushrod to a bellcrank that transmits the motion to an idler just forward of the aft edge of the horizontal stabilizer. One of these idlers is shown in Figure 70.  </p>
+<figure>
+    <img class="imageCentered_3x4" src="img/img_Fig_18.png">
+    <figcaption class="centerText">Worm-Gear Box</figcaption>
+</figure>
+
+<p>The worm gear drives a sector gear with an exposed sector arm attached on the aft side of the gatebox. The sector arm is connected by a pushrod to a bellcrank that transmits the motion to an idler just forward of the aft edge of the horizontal stabilizer. One of these idlers is shown below.  </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_70.png">
+    <figcaption class="centerText">Idler</figcaption>
+</figure>
 
 <p>The bellcrank has output arms on both the right and left ends. Each of these ends connects to an idler in each of the horizontal stabilizers. Motion is then transmitted via dual control pushrods to the control horns of the elevator tabs on both sides of the airplane.  The worm-and-sector arrangement allows the selected position of the tab to be maintained by sliding-face friction between the worm gear and the gear sector. If the trim tabs creep in flight, rework the friction bellville washers as detailed in SIL 802-0043. </p>
 
