--- a/html/Maintenance/Elevator Controls.html
+++ b/html/Maintenance/Elevator Controls.html
@@ -1,12 +1,22 @@
-<p>Details of the elevator controls are shown in Figure 68.  The aft elevator push-rod that connects to the elevator horns is p/n 70522-1 and is adjustable on the forward end, which has a Fafnir RE4M6 bearing installed. The aft end of the push-rod has a NMB p/n MS1404-4 bearing same as the elevators and rudder and is pressed into place and staked just as in other applications. If it is to be removed, see the RUDDER section for removal instructions. </p>
+<p>Details of the elevator controls are shown below.  The aft elevator push-rod that connects to the elevator horns is p/n 70522-1 and is adjustable on the forward end, which has a Fafnir RE4M6 bearing installed. The aft end of the push-rod has a NMB p/n MS1404-4 bearing same as the elevators and rudder and is pressed into place and staked just as in other applications. If it is to be removed, see the RUDDER section for removal instructions. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_68.png">
+    <figcaption class="centerText">Elevator Controls</figcaption>
+</figure>
 
 <p>Due to dynamic forces at airspeeds above 140 mph, some aircraft may develop an oscillation about the pitch axis if flown with hands off the control stick, and rough air is encountered. Full control of the aircraft is accomplished by hands on the control stick, which will stop the oscillation. </p>
 
 <p>The factory has determined that by adding a small amount of friction in the elevator control system, the oscillation is damped with hands off the control stick. </p>
 
-<p>A friction device has been designed which bolts to the fuselage frame at the support bracket for the p/n 70117-1 elevator idler. This device is shown in Figure 68A. Friction is achieved by the clamping action about the elevator idler housing.  </p>
+<p>A friction device has been designed which bolts to the fuselage frame at the support bracket for the p/n 70117-1 elevator idler. This device is shown below. Friction is achieved by the clamping action about the elevator idler housing.  </p>
 
-<p>If at any time an oscillation is noted when the aircraft is flown hands off, the clamping action of the friction device should be increased. This is accomplished by tightening the bolt as shown in Figure 68A. It is called a “damper" and is mounted per drawing 71335. </p>
+<figure>
+    <img class="imageCentered_3x4" src="img/img_Fig_68A.png">
+    <figcaption class="centerText">Friction Device</figcaption>
+</figure>
+
+<p>If at any time an oscillation is noted when the aircraft is flown hands off, the clamping action of the friction device should be increased. This is accomplished by tightening the bolt as shown above. It is called a “damper" and is mounted per drawing 71335. </p>
 
 <p>To measure the amount of friction required conduct the following procedure: </p>
 
