--- a/html/Maintenance/Spray Lever Controls.html
+++ b/html/Maintenance/Spray Lever Controls.html
@@ -2,7 +2,12 @@
 
 <p><b>AT-802</b></p>
 
-<p>Details of the spray-lever controls are shown in figure 62A. The p/n 82240-1 spray lever assembly is attached to the mid-cockpit frame tube and has an AG-235 micro-control attached to limit the lever travel and hence the spray pressure. Keep the threaded screw on the micro-control greased and make sure the tab on the spray lever contacts the bushing that is attached to the lower adjustment block. </p>
+<p>Details of the spray-lever controls are shown beneath. The p/n 82240-1 spray lever assembly is attached to the mid-cockpit frame tube and has an AG-235 micro-control attached to limit the lever travel and hence the spray pressure. Keep the threaded screw on the micro-control greased and make sure the tab on the spray lever contacts the bushing that is attached to the lower adjustment block. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_62A.png">
+    <figcaption class="centerText">Spray-Lever Controls</figcaption>
+</figure>
 
 <p>The push-rod from the spray lever is p/n 82233-1 and has an adjustable Transland 44356 clevis in the lower end and a Fafnir REP4H6 in the upper end. The pushrod is attached to the bellcrank with an AN3-10A bolt. The clevis end fits a p/n 82237-1 spacer bushing that allows the bolt to be fully torqued.  </p>
 
@@ -17,7 +22,12 @@ The push-rod from the bellcrank to the valve is p/n 81149-1 which has an NMB MS1
 
 <p><b>AT-802A</b></p>
 
-<p>Details of the spray-lever controls are shown in figure 62. The p/n 80073-9 spray lever assembly is attached to the aft cockpit wall and has an AG-235 micro-control attached to limit the lever travel and hence the spray pressure. Keep the threaded screw on the micro-control greased and make sure the tab on the spray lever contacts only the head of the AN4-5A bolt that is attached to the lower adjustment block. </p>
+<p>Details of the spray-lever controls are shown beneath. The p/n 80073-9 spray lever assembly is attached to the aft cockpit wall and has an AG-235 micro-control attached to limit the lever travel and hence the spray pressure. Keep the threaded screw on the micro-control greased and make sure the tab on the spray lever contacts only the head of the AN4-5A bolt that is attached to the lower adjustment block. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_62.png">
+    <figcaption class="centerText">Spray-Lever Controls</figcaption>
+</figure>
 
 <p>The push rod from the spray lever is p/n 80580-1 and has an adjustable Fafnir REP4M6 bearing in the lower end and a Fafnir REP4H6 bearing in the upper end. </p>
 
@@ -27,7 +37,7 @@ The push-rod from the bellcrank to the valve is p/n 81149-1 which has an NMB MS1
 
 <p><b>For firefighting aircraft with an optional spray dispersal system,</b> the pushrod from the bellcrank to the valve is p/n 80756-1 which has a Fafnir REP4H6 bearing in each end. </p>
 
-<p>The spray lever in the cockpit can be adjusted to personal preference by adjusting the Spray Handle Adjustment Bearing as shown in Figure 62. The procedures that may be followed for adjustment of the spray-lever position in the cockpit: </p>
+<p>The spray lever in the cockpit can be adjusted to personal preference by adjusting the Spray Handle Adjustment Bearing as shown in the figure above. The procedures that may be followed for adjustment of the spray-lever position in the cockpit: </p>
 
 <ol type="1">
     <li>Remove the bolt that secures the adjustment bearing to the bellcrank.</li>
