--- a/html/Maintenance/Spray Plumbing.html
+++ b/html/Maintenance/Spray Plumbing.html
@@ -1,4 +1,9 @@
-<p>Details of the spray plumbing are shown in Figure 64. </p>
+<p>Details of the spray plumbing are shown below. </p>
+
+<figure>
+    <img class="imageCentered_3x5" src="img/img_Fig_64.png">
+    <figcaption class="centerText">Spray Plumbing</figcaption>
+</figure>
 
 <p>The plumbing from the hopper gate box to the spray pump consists of a p/n 80385-4 tube assembly and an 80376-1 hose attached to the 80385-4 tube. The hose is clamped with QS200M56S clamps which are entirely stainless. </p>
 
