--- a/html/Maintenance/Vertical Fin.html
+++ b/html/Maintenance/Vertical Fin.html
@@ -1,4 +1,10 @@
-<p>Details of the vertical fin are shown in Figure 52.  The cantilever vertical fin is attached to the fuselage frame at the front spar location with two NAS1306-13 bolts and AN365-624 nuts. It has been found that these two bolts tend to loosen in service. No doubt buffeting from the propeller slipstream during run-up and stresses from turns tend to produce constant loads from side to side that tend to loosen the nuts. </p>
+<p>Details of the vertical fin are shown below.  The cantilever vertical fin is attached to the fuselage frame at the front spar location with two NAS1306-13 bolts and AN365-624 nuts. It has been found that these two bolts tend to loosen in service. No doubt buffeting from the propeller slipstream during run-up and stresses from turns tend to produce constant loads from side to side that tend to loosen the nuts. </p>
+
+<figure>
+    <img class="imageCentered_3x5" src="img/img_Fig_52.png">
+    <figcaption class="centerText">Vertical Fin</figcaption>
+</figure>
+
 
 <p>Check the torque on the two NAS1306-13 bolts at 100 hour intervals. If the bolt is held stationary and the torque wrench applied to the nut, the torque value should be 420 inch-pounds. For the reverse of this procedure, torque should be 460 inch-pounds. </p>
 
