--- a/html/Maintenance/Fuel Header Tank Sump Draining.html
+++ b/html/Maintenance/Fuel Header Tank Sump Draining.html
@@ -1,1 +1,6 @@
-<p>Drain the fuel header tank sump DAILY to remove any moisture in the fuel system from condensation or contamination. Draining the sump daily also will prevent the drain valve from freezing up from contact with fertilizer and chemicals. The location and access to this drain is shown in Figure 47. </p>
+<p>Drain the fuel header tank sump DAILY to remove any moisture in the fuel system from condensation or contamination. Draining the sump daily also will prevent the drain valve from freezing up from contact with fertilizer and chemicals. The location and access to this drain is shown below. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_47.png">
+    <figcaption class="centerText">Fuel Header Tank Sump Drain</figcaption>
+</figure>
