--- a/html/Maintenance/Horizontal Stabilizers.html
+++ b/html/Maintenance/Horizontal Stabilizers.html
@@ -1,5 +1,5 @@
 <p>
-    The details of the horizontal stabilizer are shown in Figure 66. The horizontal stabilizers require very little
+    The details of the horizontal stabilizer are shown below. The horizontal stabilizers require very little
     maintenance since they are all metal. They are attached to the fuselage frame with two AN5-7A bolts, which have a
     washer under the head, and two under the nut. On 12-month inspections the gap cover should be removed from the
     stabilizer and the bolt condition and torque checked. At the same time inspect the fuselage fittings closely for
@@ -7,6 +7,12 @@
     which are Phillips truss head #4x1/4" long. A No. 39 hole is drilled for the screw installation. The S202VW rubber
     channel is a Cessna part and is attached with 3-M 8001 Adhesive.
 </p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_66.png">
+    <figcaption class="centerText">Horizontal Stabilizer</figcaption>
+</figure>
+
 
 <p>
     The stabilizer is sealed on the ends with PR-1422 A2 to prevent chemical entry.
