--- a/html/Maintenance/Rudder.html
+++ b/html/Maintenance/Rudder.html
@@ -1,4 +1,10 @@
-<p >Details of the rudder are shown in Figure 53.  The rudder is attached to the vertical fin with three AN4-10A bolts, with an AN960-416 washer under the bolt head, and two washers under the AN365-428A nut. The rudder hinges have NMB p/n MS14104-4 bearings installed, which are staked on each side of the 1/4" thick hinge fitting. Since there is a certain amount of drag with these spherical bearings, it is very important to fully torque (100 inch-pounds at the nut) the three AN4-10A bolts that attach the rudder to the fin. If the bolts are loose, the bolts will turn on the fin hinge brackets and cause the holes to become elongated. </p>
+<p >Details of the rudder are shown below.  The rudder is attached to the vertical fin with three AN4-10A bolts, with an AN960-416 washer under the bolt head, and two washers under the AN365-428A nut. The rudder hinges have NMB p/n MS14104-4 bearings installed, which are staked on each side of the 1/4" thick hinge fitting. Since there is a certain amount of drag with these spherical bearings, it is very important to fully torque (100 inch-pounds at the nut) the three AN4-10A bolts that attach the rudder to the fin. If the bolts are loose, the bolts will turn on the fin hinge brackets and cause the holes to become elongated. </p>
+
+<figure>
+    <img class="imageCentered_3x5" src="img/img_Fig_53.png">
+    <figcaption class="centerText">Rudder</figcaption>
+</figure>
+
 
 <p>The bearings have little wear, but if it is necessary to replace them, construct a puller that will apply force to the outer ring of the bearing with the opposing force against the aluminum housing. An AN4 bolt through both parts of the puller should be tightened until the bearing rim is pulled past the stake marks and the bearing comes out of the housing. When the new bearing is installed, re-stake with a center punch. </p>
 
