--- a/html/Maintenance/Flap Relay Troubleshooting.html
+++ b/html/Maintenance/Flap Relay Troubleshooting.html
@@ -1,5 +1,10 @@
 <p>If the micro-switches and the flap motor appear OK then the trouble may be in the relays. Details of the flap relays
-  are shown in Figure 28.</P>
+  are shown in the figure below.</P>
+
+  <figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_28.png">
+    <figcaption class="centerText">Flap Relay Troubleshooting</figcaption>
+</figure>
 
 <p>With the master switch on use of a voltmeter to check that there is power to the relays at the -299 and -235 wires.
   If there is battery voltage there, have someone attempt to extend and retract the flaps with the flap switch while
