--- a/html/Maintenance/Flap Actuator Installation Instructions.html
+++ b/html/Maintenance/Flap Actuator Installation Instructions.html
@@ -1,4 +1,24 @@
-<p>The details for flap actuator installation are shown in Figure 27 and Figure 27A, 27B, and 27C (71112-1 Actuator). </p>
+<p>The details for flap actuator installation are shown below (71112-1 Actuator). </p>
+
+<figure>
+    <img class="imageCentered_3x4" src="img/img_Fig_27.png">
+    <figcaption class="centerText">Flap Actuator</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_27A.png">
+    <figcaption class="centerText">Flap Actuator</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_27B.png">
+    <figcaption class="centerText">Flap Actuator</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_27C.png">
+    <figcaption class="centerText">Flap Actuator</figcaption>
+</figure>
 
     <ol type="1">
         <li>Re-install actuator in aircraft in reverse order as removal. </li>
