--- a/html/Maintenance/Flap Actuator.html
+++ b/html/Maintenance/Flap Actuator.html
@@ -30,12 +30,24 @@
        (tee) assembly is fitted on the ball nut and held in place with the 71152-1 yoke nut assembly. This yoke nut
        includes a steel grease shield and is secured on the ball nut with two 90289A338 set screws. The yoke assembly is
        attached to two 1/4" thick aluminum 70032-1 arm assemblies that are bolted with four AN4-7A bolts to the flap
-       torque tube assembly. See Figures 27A and 27B. </p>
-<div class='boxCautionLarge'>
-       <p class='boxCautionLargeHeader'>CAUTION</p>
-       <p class='boxCautionLargeText'>Have someone hold up on the flap trailing edge so the flaps will not fall down
-              against the boom hangers.</p>
-</div>
+       torque tube assembly. See the figures below. </p>
+
+       <div class='boxCautionLarge'>
+              <p class='boxCautionLargeHeader'>CAUTION</p>
+              <p class='boxCautionLargeText'>Have someone hold up on the flap trailing edge so the flaps will not fall down
+                     against the boom hangers.</p>
+       </div>
+
+       <figure>
+              <img class="imageCentered_4x3" src="img/img_Fig_27A.png">
+              <figcaption class="centerText">Flap Actuator</figcaption>
+          </figure>
+
+          <figure>
+              <img class="imageCentered_4x3" src="img/img_Fig_27B.png">
+              <figcaption class="centerText">Flap Actuator</figcaption>
+          </figure>
+
 
 <p>See the section on FLAP ACTUATOR TROUBLESHOOTING for a step-by-step procedure for removing the actuator assembly from
        the aircraft. </p>
