--- a/html/Maintenance/Fuel System Drains.html
+++ b/html/Maintenance/Fuel System Drains.html
@@ -1,6 +1,16 @@
-<p>Refer to Figure 47 for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot's walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
+<p>Refer to the figure below for the location of the fuel tank and header tank drains. These drains are designated for daily activation during the pilot's walk-around inspection as shown in the AIRPLANE FLIGHT MANUAL. </p>
 
-<p>Fuel system drains and other drains on the engine are shown in Figure 51. </p>
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_41.png">
+    <figcaption class="centerText">Drains</figcaption>
+</figure>
+
+<p>Fuel system drains and other drains on the engine are shown below. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_51.png">
+    <figcaption class="centerText">Fuel System Drains</figcaption>
+</figure>
 
 <p>The wing tanks have Curtis CCA-1650 drain valves and the header tank and the header tank has a Curtis 39000 drain valve. If the valves leak, remove them and check the seals for nicks and look for trash between the seal and the valve seat. Apply some 3H Permatex or equivalent to the threads of all drains before they are re-installed. If the seal is bad, replace the valve. </p>
 
