--- a/html/Maintenance/Fuel Tank Senders.html
+++ b/html/Maintenance/Fuel Tank Senders.html
@@ -1,4 +1,9 @@
-<p>Each of the fuel tanks has two fuel-quantity sending elements. These two sending elements are connected in series electrically. The outboard sending element is active in sensing fuel level when the fuel level is in the upper third of the tank. The inboard sending element is active when the fuel level is in the lower third of the tank. Both of the elements are active when the fuel level is in the mid-range. The schematic for the fuel gauge system is shown in Figure 28. </p>
+<p>Each of the fuel tanks has two fuel-quantity sending elements. These two sending elements are connected in series electrically. The outboard sending element is active in sensing fuel level when the fuel level is in the upper third of the tank. The inboard sending element is active when the fuel level is in the lower third of the tank. Both of the elements are active when the fuel level is in the mid-range. The schematic for the fuel gauge system is shown below. </p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_28.png">
+    <figcaption class="centerText">Fuel Gauge System Schematic</figcaption>
+</figure>
 
 <p>The inboard sender is insulated from ground by the ten insulating washers that are used on both sides of the five holes in its flange. It has two wires attached. One of the wires exits the fuel-tank wall through a banana jack en route to the outboard sender. The other wire exits the fuel-tank inboard end wall through a banana jack en route to the fuel gauge. </p>
 
