--- a/html/Maintenance/Brake Removal and Replacement.html
+++ b/html/Maintenance/Brake Removal and Replacement.html
@@ -1,5 +1,10 @@
-<p>Brake details are shown in Figure 32.</p>
+<p>Brake details are shown below.</p>
 <p>Brake fluid used is red Mil-H-5606A petroleum-base fluid, which is used in most light aircraft. Do not use automotive brake fluid as this will swell the O-rings. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_32.png">
+    <figcaption class="centerText">Brake Details</figcaption>
+</figure>
 
 <p>The wheel units can be removed by using a wrench to remove the twelve bolts attaching the two halves of each brake assembly. The brake line may be left connected if only the linings are to be charged. Linings are Cleveland p/n 66-131 and are attached with Cleveland p/n 105-67 rivets. There are 32 linings and 64 rivets per aircraft.</p>
 
