--- a/html/Maintenance/Engine Instruments.html
+++ b/html/Maintenance/Engine Instruments.html
@@ -2,4 +2,9 @@
 
 <p>The Fuel Filter Pressure Light, Low Oil Pressure Light, Oil Temperature Indicator, Air Filter Pressure Light, Chip Light, and Hour Meter are all powered by the airplane's electrical system.</p>
 
-<p>The wiring schematics for the engine instruments are shown in Figure 36. </p>
+<p>The wiring schematics for the engine instruments are shown below. </p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_36.png">
+    <figcaption class="centerText">Wiring Schematics</figcaption>
+</figure>
