--- a/html/Maintenance/Fuselage Removable Skins.html
+++ b/html/Maintenance/Fuselage Removable Skins.html
@@ -1,4 +1,9 @@
-<p>Details of the fuselage removable skins are shown in Figure 57. </p>
+<p>Details of the fuselage removable skins are shown below. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_57.png">
+    <figcaption class="centerText">Fuselage Removable Skins</figcaption>
+</figure>
 
 <p>The side skins of the fuselage are attached to the fixed skins with 1/4 turn studs of various lengths. The stud has a basic part number of 4002 (Camloc) or 1142005 (Monadnock) and the dash number designates the length. The most common stud is 4002-3 with the next most common a 4002-4. All studs have the dash numbers on the head. Stud lengths used are -3 through -15. Stud installation requires a 4002-N grommet and a R4G snap ring. Installation pliers are needed for stud installation or removal. All Camloc receptacles are p/n 40R17-2. </p>
 
