--- a/html/Maintenance/Main Gear Spring.html
+++ b/html/Maintenance/Main Gear Spring.html
@@ -1,4 +1,9 @@
-<p>Details of the main-gear spring are shown in Figure 72.  The main gear spring is p/n 40091-3. It will fit on either side of the aircraft. It is machined of E-4340 aircraft quality steel, formed, heat-treated, and shot-peened for fatigue resistance. It is sandblasted and primed with an epoxy primer (US Paint R9006 Epoxy Primer) and finished with Alumigrip G-9046 yellow polyurethane paint. </p>
+<p>Details of the main-gear spring are shown below. The main gear spring is p/n 40091-3. It will fit on either side of the aircraft. It is machined of E-4340 aircraft quality steel, formed, heat-treated, and shot-peened for fatigue resistance. It is sandblasted and primed with an epoxy primer (US Paint R9006 Epoxy Primer) and finished with Alumigrip G-9046 yellow polyurethane paint. </p>
+
+<figure>
+    <img class="imageCentered_3x4" src="img/img_Fig_72.png">
+    <figcaption class="centerText">Main-Gear Spring</figcaption>
+</figure>
 
 <p>The inboard attachment of the spring to the fuselage frame is with a NAS158A106 bolt, MS20002C18 washer under the bolt head (be sure the chamfered side of the washer is next to the head), one or more MS20002-18 washers under the nut, AN310-18 nut, and MS24665-360 cotter. The bolt is installed upside down and torque should be 7,000 inch-pounds (torque wrench on bolt head). A simple adapter for your torque wrench is a short piece of 1 1/8" hex stock to enter the bolt head, and a 1 1/8" socket for your torque wrench. </p>
 
