--- a/html/Maintenance/Tail Gear Spring.html
+++ b/html/Maintenance/Tail Gear Spring.html
@@ -1,4 +1,9 @@
-<p>The tail-gear spring is shown in Figure 73. </p>
+<p>The tail-gear spring is shown below. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_73.png">
+    <figcaption class="centerText">Tail-Gear Spring</figcaption>
+</figure>
 
 <p>The tail gear spring is p/n 40092-6. It is machined of E-4340 aircraft quality steel, formed, heat-treated, and shot-peened for fatigue resistance. It is sand-blasted and primed with an epoxy primer (See Urethane Topcoat Materials) and finished with yellow polyurethane paint. </p>
 
