--- a/html/Maintenance/Windshield.html
+++ b/html/Maintenance/Windshield.html
@@ -1,4 +1,9 @@
-<p>Details of the windshield are shown in Figure 59. </p>
+<p>Details of the windshield are shown below. </p>
+
+<figure>
+    <img class="imageCentered_3x4" src="img/img_Fig_59.png">
+    <figcaption class="centerText">Windshield</figcaption>
+</figure>
 
 <p>For the plexiglass portion of the windshield be careful to always use a clean, soft cotton or microfiber rag (never a paper towel) and plastic windshield cleaner to prevent scratches. There are several commercially available products for cleaning plastic such as Plexus, All Kleer, and Clear View.  A mixture of equal parts water and hydrogen peroxide also makes a good plastic windshield cleaner.  DO NOT use any cleaner that contains ammonia or the plexiglass will be damaged.  It is also important to clean the windshield by gently rubbing the surface up and down, not in a circular motion.  Cleaning in a circular motion may cause a halo effect on your windshield. </p>
 
