--- a/html/Maintenance/Wing Attachment to Fuselage.html
+++ b/html/Maintenance/Wing Attachment to Fuselage.html
@@ -1,4 +1,14 @@
-<p>Details of the wing's front-spar attachment to the fuselage are shown in Figure 79. The wing's rear-spar attachment to the fuselage is shown in Figure 81. </p>
+<p>Details of the wing's front-spar and rear-spar attachments to the fuselage are shown below. </p>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_79.png">
+    <figcaption class="centerText">Front-Spar Attachment</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_81.png">
+    <figcaption class="centerText">Rear-Spar Attachment</figcaption>
+</figure>
 
 <p>Two aluminum and two steel wing-attach angles are used to attach the wing main spar to the fuselage vertical tube just aft of the main spar. There are four AN6-31A bolts that attach each vertical tube to the wing angles. </p>
 
@@ -6,7 +16,12 @@
 
 <p>The wing attach angles are p/n 20605-1 (aluminum) and p/n 20475-1 (steel). They are attached to the main spar with six AN6-15A and two AN6-16A bolts. If it is necessary to change the wing attach angles due to bolt wear or fuselage repairs, ask the factory for detailed instructions on how to drill the attach angles at the time they are ordered, as these angles are drilled to match each individual aircraft. </p>
 
-<p>The rear spar plate is attached to the fuselage frame with a single NAS1309-25 bolt. These bolts wear slightly and should be checked at 1,000 hour intervals, and replaced if worn or rusty. Do not use AN bolts at this location. To remove the bolts, first remove the lower wing gap cover, which is attached with screws. Removal detail of the gap cover is shown in Figure 82. </p>
+<p>The rear spar plate is attached to the fuselage frame with a single NAS1309-25 bolt. These bolts wear slightly and should be checked at 1,000 hour intervals, and replaced if worn or rusty. Do not use AN bolts at this location. To remove the bolts, first remove the lower wing gap cover, which is attached with screws. Removal detail of the gap cover is shown below. </p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_82.png">
+    <figcaption class="centerText">Gap Cover Removal Detail</figcaption>
+</figure>
 
 <p>Place a small hydraulic jack under the wing rear spar plate and apply only a small amount of pressure to support the wing when the bolt is removed. Lock the parking brake so the aircraft will not move. Remove the nut and drive the bolt out with a small hammer gently, protecting the threads from damage. Inspect the bolt visually, then place it on a smooth plate and rotate to see if it is bent. Inspect for thread damage or rust. Do not use excessive force to remove the bolts, and do not heat. If there is difficulty in removing the bolts, contact the factory. </p>
 
