--- a/html/Maintenance/Fuselage Fixed Skins.html
+++ b/html/Maintenance/Fuselage Fixed Skins.html
@@ -1,4 +1,14 @@
-<p>Details of the upper fuselage fixed skins are shown in Figure 54. Details of the lower fuselage fixed skins are shown in Figure 58. </p>
+<p>Details of the upper and lower fuselage fixed skins are shown below. </p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_54.png">
+    <figcaption class="centerText">Upper Fuselage Fixed Skins</figcaption>
+</figure>
+
+<figure>
+    <img class="imageCentered_4x3" src="img/img_Fig_58.png">
+    <figcaption class="centerText">Lower Fuselage Fixed Skins</figcaption>
+</figure>
 
 <p>The fixed skins are attached with 8-32 machine screws and nuts. Nuts in the lower skins are stainless MS21044-C08 and in the upper fuselage areas are AN365-832. The 100° countersunk machine screws are p/n 90012-5 for the 8-32 x 1/2 size, 90012-7 for the 8-32x5/8 size. The Truss head machine screws are p/n 90013-3 for the 8-32x3/8 long, -5 for 1/2 long,-7 for 5/8 long, and -8 for the ¾ long. </p>
 
