--- a/html/Maintenance/Main Wheel Alignment.html
+++ b/html/Maintenance/Main Wheel Alignment.html
@@ -1,6 +1,11 @@
 <p>The need for main wheel alignment is indicated by a number of subjective observations. The first probable sign of the need for alignment is excessive tire wear or feathering at the edges of the tread beads. Dog-tracking, or the tendency of the airplane to crab during taxi and roll out after landing, is another sign that alignment may be required. A visual observation of both of the wheels for symmetry of angle with respect to the airplane center-line when viewed from the front may show the need for alignment. </p>
 
-<p>Manufacturing differences in forming of the main gear legs calls for the use of tapered shims to provide the correct camber and toe-in on the main wheels. No caster adjustment is available. A diagram of the chamber and toe-in measurements is shown in Figure 75. </p>
+<p>Manufacturing differences in forming of the main gear legs calls for the use of tapered shims to provide the correct camber and toe-in on the main wheels. No caster adjustment is available. A diagram of the chamber and toe-in measurements is shown below. </p>
+
+<figure>
+    <img class="imageCentered_3x5" src="img/img_Fig_75.png">
+    <figcaption class="centerText">Chamber and Toe-In Measurements</figcaption>
+</figure>
 
 <p>The following procedure should be followed to align the main wheels: </p>
 
