--- a/html/Maintenance/Tail Wheel.html
+++ b/html/Maintenance/Tail Wheel.html
@@ -1,4 +1,9 @@
-<p>The tail wheel is a Cleveland p/n 40-14003. Keeping the bearings properly lubricated is the key to long bearing life. A grease fitting is installed in the side of the wheel. Details of the tail wheel are shown in Figure 77. </p>
+<p>The tail wheel is a Cleveland p/n 40-14003. Keeping the bearings properly lubricated is the key to long bearing life. A grease fitting is installed in the side of the wheel. Details of the tail wheel are shown below. </p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_77.png">
+    <figcaption class="centerText">Tail Wheel</figcaption>
+</figure>
 
 <p>To remove the tail wheel, jack the wheel clear of the ground per LIFTING AND JACKING instructions and remove the long AN7C84A bolt that attaches the axle to the fork. Note the method of safety wire on the large stainless jam nut and cut the wire loose from the fork. The tail wheel is now free and ready for dis-assembly. Back off the jam nut from the axle and remove the axle. Inspect the axle for wear at the bearing positions, as insufficient greasing procedures will cause the bearing to turn on the axle and ruin both parts. Inspect the AN7 bolt for wear and straightness, and slide the bolt through the fork to check the hole in the fork for wear. There should be no wear in the fork holes since there is no movement between fork and bolt. If the tire is to be removed, deflate and remove the bolts holding the wheel halves together. </p>
 
