--- a/html/Maintenance/Wing Center Splice Connection.html
+++ b/html/Maintenance/Wing Center Splice Connection.html
@@ -1,4 +1,9 @@
-<p>Details of the wing center-splice connection are shown in Figure 83. </p>
+<p>Details of the wing center-splice connection are shown below. </p>
+
+<figure>
+    <img class="imageCentered_5x3" src="img/img_Fig_83.png">
+    <figcaption class="centerText">Wing Center-Splice Connection</figcaption>
+</figure>
 
 <p>The main spar caps of each wing are attached to each other with p/n 20976-1/-2 (Upper), 21082-1/-2 (Lower) attach blocks. The main spar webs are attached to each other by p/n 20994-2 plate of .59" thick heat treated 4130 steel. The connection to the fuselage on the aircraft centerline is made with a p/n 20618-1 steel plate of .125 4130N connected to the fuselage structure with two AN6-25A bolts, and to the two 3/4" bolts through the 20976-1 upper spar cap attach block. There are four p/n 20606-1 tube-nut welded assemblies and two p/n 20608-1 sleeves in each wing installation. The sleeves and tube-nuts are drilled 23/64" and reamed .374 after the tube-nuts have been fully tightened, and two AN6-21A bolts installed in each sleeve. If the wings are removed from the aircraft, it is usually necessary to replace the four tube-nut assemblies and the two sleeves since the .374 reamed holes through both parts will probably not line up. In this case, tighten the new tube-nuts 1920 inch-pounds torque, position the new sleeves mid-way between the tube nuts, drill 23/64" through the sleeve and tube-nut, and ream .374 for the AN6-21A bolt installation. </p>
 
