--- a/html/Inspection/Insp_ENGINE AND MOUNT.html
+++ b/html/Inspection/Insp_ENGINE AND MOUNT.html
@@ -7,28 +7,30 @@
   <tr>
     <td class="cellInspectionNumber">EM2</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Check security of fuel and oil lines and controls at all connections. Inspect for fretting/chafing of all lines and controls.</td>
+    <td class="cellInspectionText">Check security of fuel and oil lines and controls at all connections. Inspect for
+      fretting/chafing of all lines and controls.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM3</td>
     <td class="cellInspectionInterval">(100)</td>
     <td class="cellInspectionText">
-      Check controls on primary governor and controls on fuel control. Have someone in cockpit move start lever and then power lever through range of travel and look for loose connections, binding parts, rubbing, etc.
-      <div class="boxCautionSmall">
-        <p class="boxCautionSmallHeader">CAUTION</p>
-        <p class="boxCautionSmallText">Do not move power lever into reverse position with engine stopped or controls will be damaged.</p>
-      </div>
+      Check controls on primary governor and controls on fuel control. Have someone in cockpit move start lever and then
+      power lever through range of travel and look for loose connections, binding parts, rubbing, etc.  <b>CAUTION:</b> Do not move power lever into reverse position with engine stopped or controls
+        will be damaged.
+
     </td>
   </tr>
   <tr>
-  <td class="cellInspectionNumber">EM4</td>
+    <td class="cellInspectionNumber">EM4</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">nspect all cowling parts for cracks, especially at screw connections and in the corners of cut-outs.</td>  
+    <td class="cellInspectionText">Inspect all cowling parts for cracks, especially at screw connections and in the
+      corners of cut-outs.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM5</td>
     <td class="cellInspectionInterval">(100)</td>
-    <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of chafing.  (Reference Service Letter #126).</td>
+    <td class="cellInspectionText">Inspect engine oil scavenge tubes and fuel lines at engine firewalls for signs of
+      chafing. (Reference Service Letter #126).</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM6</td>
@@ -38,12 +40,15 @@
   <tr>
     <td class="cellInspectionNumber">EM7</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Inspect engine vibration insulators for cracks, swelling, or separation of elastomer.</td>
+    <td class="cellInspectionText">Inspect engine vibration insulators for cracks, swelling, or separation of elastomer.
+    </td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM8</td>
     <td class="cellInspectionInterval">(300)</td>
-    <td class="cellInspectionText">Examine engine mount for cracks (Reference Service Letter #253) and check torque at firewall connections.  Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts.  Reinstall safety wire and cotter pins.</td>
+    <td class="cellInspectionText">Examine engine mount for cracks (Reference Service Letter #253) and check torque at
+      firewall connections. Torque is 4000 in-lbs on head of upper bolts and 1100-1300 in-lbs on nuts of lower bolts.
+      Reinstall safety wire and cotter pins.</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM9</td>
@@ -53,7 +58,8 @@
   <tr>
     <td class="cellInspectionNumber">EM10</td>
     <td class="cellInspectionInterval">(2 Years)</td>
-    <td class="cellInspectionText">Verify calibration of ITT Indicating System.  (See Maintenance Section, ITT INSTRUMENT CALIBRATION CHECK for procedures).</td>
+    <td class="cellInspectionText">Verify calibration of ITT Indicating System. (See Maintenance Section, ITT INSTRUMENT
+      CALIBRATION CHECK for procedures).</td>
   </tr>
   <tr>
     <td class="cellInspectionNumber">EM11</td>
@@ -68,6 +74,7 @@
   <tr>
     <td class="cellInspectionNumber">EM13</td>
     <td class="cellInspectionInterval">(---)</td>
-    <td class="cellInspectionText">Conduct all other inspections according to “Pratt and Whitney Engine Maintenance Manual" at the recommended interval.</td>
+    <td class="cellInspectionText">Conduct all other inspections according to “Pratt and Whitney Engine Maintenance
+      Manual" at the recommended interval.</td>
   </tr>
 </table>
