--- a/html/Maintenance/Elevator Controls.html
+++ b/html/Maintenance/Elevator Controls.html
@@ -1,4 +1,4 @@
-<p>Details of the elevator controls are shown below.  The aft elevator push-rod that connects to the elevator horns is p/n 70522-1 and is adjustable on the forward end, which has a Fafnir RE4M6 bearing installed. The aft end of the push-rod has a NMB p/n MS1404-4 bearing same as the elevators and rudder and is pressed into place and staked just as in other applications. If it is to be removed, see the RUDDER section for removal instructions. </p>
+<p>Details of the elevator controls are shown below.  The aft elevator push-rod that connects to the elevator horns is p/n 70522-1 and is adjustable on the forward end, which has a Fafnir RE4M6 bearing installed. The aft end of the push-rod has a NMB p/n MS1404-4 bearing same as the elevators and rudder and is pressed into place and staked just as in other applications. If it is to be removed, see <xref sectionTarget="2.45.12" labelPrepend="Section">.</p>
 
 <figure>
     <img class="imageCentered_4x3" src="img/img_Fig_68.png">
